# advent-of-code

./: README.md
2015/: Cargo.toml  README.md  day.tpl
2015/src/: coor.rs  lib.rs  shared.rs
2016/: Cargo.toml  README.md
2022/: Cargo.toml  README.md  day.tpl
2022/src/: coor.rs  coor3.rs  lib.rs
2023/: Cargo.toml  day.tpl
2023/src/: lib.rs  shared.rs
