[package]
name = "aoc2015"
version = "1.0.0"
authors = ["David Szotten <davidszotten@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
# cached = "*"
clap = "*"
# itertools = "*"
lazy_static = "*"
md-5 = "*"
# num = "*"
# permutohedron = "*"
# pest = "*"
# pest_derive = "*"
# reduce = "*"
regex = "*"
