[package]
name = "aoc2015"
version = "1.0.0"
authors = ["David Szotten <davidszotten@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
# cached = "*"
clap = {version = "*", features=["cargo"]}
itertools = "*"
lazy_static = "*"
md-5 = "*"
multipeek = "*"
# num = "*"
permutohedron = "*"
# pest = "*"
# pest_derive = "*"
# reduce = "*"
regex = "*"
serde_json = "*"
